included fullcalendar and introducing new colors/fonts

--- a/artist.html
+++ b/artist.html
@@ -39,8 +39,7 @@
 		        		<span class="caret"></span>
 		        	</a>
 		          	<ul class="dropdown-menu" role="menu">
-			            <li><a href="#">Artistes et artisans</a></li>
-			            <li><a href="#">Boutique</a></li>
+			            <li><a href="#">Les créatifs</a></li>
 		          	</ul>
 		        </li>
 				<li><a href="blog.html">Blog</a></li>
@@ -53,7 +52,7 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<a href="#" class="thumbnail profile">
-					<img src="../Images_Artistes/Bia/profile.jpg" class="img-rounded">
+					<img src="../content/Images_Artistes/Bia/profile.jpg" class="img-circle">
 				</a>
 			</div>
 			<div class="col-sm-6">
@@ -65,11 +64,6 @@
 					<blockquote>
   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
 					</blockquote>
-				</div>
-				<div class="row">
-					<a href="products.html">
-						<p class="lead">Mes produits</p>
-					</a>
 				</div>
 				<div class="row">
 					<address>
@@ -85,6 +79,67 @@
 				</div>
 			</div>
 		</div>
+	</div>
+
+	<div class="section">
+		<div class="page-header text-center">
+  		<h1>Mes produits</h1>
+
+  		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<div id="mansory-products" class="mansory-container">
+		    			<div class="mansory-item">
+		    				<div class="thumbnail">
+		          				<img src="../content/Images_Artistes/Bia/Bijoux/DSCF7573.JPG">
+		          			</div>
+		    			</div>
+				      	<div class="mansory-item">
+				      		<div class="thumbnail">
+				        		<img src="../content/Images_Artistes/Bia/Bijoux/DSCF7577.JPG">
+				        	</div>
+				      	</div>
+				      	<div class="mansory-item">
+				      		<div class="thumbnail">
+					        	<img src="../content/Images_Artistes/Bia/Bijoux/DSCF7588.JPG">
+					        </div>
+				      	</div>
+				      	<div class="mansory-item">
+				      		<div class="thumbnail">
+					        	<img src="../content/Images_Artistes/Bia/Bijoux/DSCF7655.JPG">
+					        </div>
+				      	</div>
+				      	<div class="mansory-item">
+				      		<div class="thumbnail">
+					        	<img src="../content/Images_Artistes/Bia/Dessin/DSCF7540.JPG">
+					        </div>
+				      	</div>
+				      	<div class="mansory-item">
+				      		<div class="thumbnail">
+				        		<img src="../content/Images_Artistes/Bia/Dessin/DSCF7554.JPG">
+				        	</div>
+				      	</div>
+				      	<div class="mansory-item">
+				      		<div class="thumbnail">
+				        		<img src="../content/Images_Artistes/Bia/Dessin/DSCF7556.JPG">
+				        	</div>
+				      	</div>
+				      	<div class="mansory-item">
+				      		<div class="thumbnail">
+				        		<img src="../content/Images_Artistes/Bia/Bijoux/DSCF7585.JPG">
+				        	</div>
+				      	</div>
+				      	<div class="mansory-item">
+				      		<div class="thumbnail">
+				        		<img src="../content/Images_Artistes/Bia/Bijoux/DSCF7659.JPG">
+				        	</div>
+				      	</div>
+				    </div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	</div>
 
 	<footer class="footer text-center">
@@ -124,5 +179,10 @@
     		</div>
       	</div>
     </footer>
+
+    <script src="static/js/holder.min.js"></script>
+	<script src="static/js/mansory.min.js"></script>
+	<script src="static/js/imagesloaded.min.js"></script>
+	<script src="static/js/app.js"></script>
 
 </body>
