--- a/blog.html
+++ b/blog.html
@@ -210,9 +210,15 @@
       	</div>
     </footer>
 
-	<script src="static/js/holder.min.js"></script>
+    <script src='static/js/jquery.min.js'></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+	<script src='static/js/moment.min.js'></script>
+	<script src='static/js/fullcalendar.min.js'></script>
+
 	<script src="static/js/mansory.min.js"></script>
 	<script src="static/js/imagesloaded.min.js"></script>
+	<script src="static/js/holder.min.js"></script>
 	<script src="static/js/app.js"></script>
 </body>
 
