--- a/funding.html
+++ b/funding.html
@@ -8,6 +8,7 @@
 <title>Créaphé</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 <link href='http://fonts.googleapis.com/css?family=Lato:300italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="static/css/font-awesome.min.css">
 <link rel="stylesheet" href="static/css/styles.css">
 </head>
@@ -39,9 +40,8 @@
 		        		<span class="caret"></span>
 		        	</a>
 		          	<ul class="dropdown-menu" role="menu">
-			            <li><a href="#">Artistes et artisans</a></li>
-			            <li><a href="#">Boutique</a></li>
-		          	</ul>
+			            <li><a href="#">Les créatifs</a></li>
+			        </ul>
 		        </li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="join.html">Inscription</a></li>
@@ -49,12 +49,14 @@
 		</div>
 	</nav>
 
-	<div class="page-header text-center">
-  		<h1>Adhérer</h1>
-  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
-	</div>
-
 	<div class="container">
+		<div class="row">		
+			<div class="page-header text-center">
+		  		<h1>Adhérer</h1>
+		  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
+			</div>
+		</div>
+
 		<div class="row">
 			<div class="col-sm-6">
 				<a href="#" class="thumbnail">
@@ -62,20 +64,47 @@
 		    	</a>
 			</div>
 			<div class="col-sm-6">
-				<p>Morbi vel magna dignissim, pretium elit at, sagittis nisl. Nulla porttitor magna vel massa accumsan aliquam. Duis vulputate varius odio, et porttitor quam dignissim quis. Mauris vulputate ullamcorper eros. Proin eu tempor nisi. Aenean fringilla euismod ante non suscipit. Integer fermentum volutpat enim, vitae tempor diam efficitur a. Integer mollis arcu quis ipsum lobortis, eget dapibus tortor sagittis.</p>
+				<p>Parce que l’expérimentation et le soutien aux créatifs sont au cœur de notre projet, nous accueillons des résidences de création, de découverte et de pratique dans nos locaux.
+Pour eux, nous créons des événement : ventes privées, marché des créateurs, ateliers thématiques, etc.
+
+Niveau d’Adhésion
+<ul>
+<li>Public : 30 euros</li>
+<li>Mineurs, Étudiants, Demandeurs d’emploi, Bénéficiaires du RSA : 15 euros</li>
+<li>Créatrices en résidence: 45 euros</li>
+<li>Professionnels (2 salariés et +) : 100 euros</li>
+<li>Professionnels (10 salariés et +) : 220 euros</li>
+<li>Collectivité : 250 euros</li>
+</ul>
+
+Tout adhérent a ainsi accès :
+<ul>
+<li>aux ressources matérielles du lieu (ouvrages, outillages, …)</li>
+<li>aux services de l’association</li>
+<li>aux tarifs adhérents sur nos actions payantes (workshop, troc party, salon de création,…)</li>
+<li>à l’accompagnement dont il a besoin dans l’espace ou dans le cadre de son activité (notamment pour les adhérents professionnels)</li>
+</ul>
+
+
+Télécharger le Bulletin d’Adhésion ici.
+</p>
 			</div>
 		</div>
 	</div>
 
-	<div class="page-header text-center">
-  		<h1>Bénévolat</h1>
-  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
-	</div>
-
 	<div class="container">
 		<div class="row">
+			<div class="page-header text-center">
+		  		<h1>Bénévolat</h1>
+		  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
+			</div>
+		</div>
+
+		<div class="row">
 			<div class="col-sm-6">
-				<p>Morbi vel magna dignissim, pretium elit at, sagittis nisl. Nulla porttitor magna vel massa accumsan aliquam. Duis vulputate varius odio, et porttitor quam dignissim quis. Mauris vulputate ullamcorper eros. Proin eu tempor nisi. Aenean fringilla euismod ante non suscipit. Integer fermentum volutpat enim, vitae tempor diam efficitur a. Integer mollis arcu quis ipsum lobortis, eget dapibus tortor sagittis.</p>
+				<p>Vous souhaitez nous soutenir?
+<li>Créaphé nous avons toujours besoin de ressources et de talents : animer des ateliers, aider à l’organisation d’évènements, faire évoluer l’association dans une logique de co-construction, … Une idée, une envie? Venez la partager !</li>
+</p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" class="thumbnail">
@@ -85,56 +114,48 @@
 		</div>
 	</div>
 
-	<div class="page-header text-center">
-  		<h1>Mécénat</h1>
-  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
-	</div>
-
-	<div class="container">
+	<div class="container-fluid" id="sponsors">
+		<div class="page-header text-center">
+  			<h1>Sponsors</h1>
+  			<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
+  		</div>
+		
 		<div class="row">
 			<div class="col-sm-6">
 				<a href="#" class="thumbnail">
-		      		<img src="holder.js/400x300">
-		    	</a>
+			      	<img src="holder.js/400x300">
+			    </a>
 			</div>
 			<div class="col-sm-6">
-				<p>Morbi vel magna dignissim, pretium elit at, sagittis nisl. Nulla porttitor magna vel massa accumsan aliquam. Duis vulputate varius odio, et porttitor quam dignissim quis. Mauris vulputate ullamcorper eros. Proin eu tempor nisi. Aenean fringilla euismod ante non suscipit. Integer fermentum volutpat enim, vitae tempor diam efficitur a. Integer mollis arcu quis ipsum lobortis, eget dapibus tortor sagittis.</p>
+				<p>Vous souhaitez agir pour la valorisation de vos « déchets » (machines, tissu, etc…), soutenir notre approche sociale et culturelle, vous pouvez devenir mécène. Vous souhaitez mettre à disposition un espace de vie pour l’association, nous soutenir financièrement, nous faire profiter de vos compétences et/ou de vos outils, promouvoir les projets des créatrices?
+				<br>
+				Vous pouvez participer à notre développement en devenant mécène</p>
 			</div>	
 		</div>
 	</div>
 
-	<div class="page-header text-center">
-  		<h1>Espace pro</h1>
-  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
-	</div>
+	<div class="container-fluid" id="funding">
+		<div class="page-header text-center">
+  			<h1>Faire un don</h1>
+  			<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
+		</div>
 
-	<div class="container">
 		<div class="row">
 			<div class="col-sm-6">
-				<p>Morbi vel magna dignissim, pretium elit at, sagittis nisl. Nulla porttitor magna vel massa accumsan aliquam. Duis vulputate varius odio, et porttitor quam dignissim quis. Mauris vulputate ullamcorper eros. Proin eu tempor nisi. Aenean fringilla euismod ante non suscipit. Integer fermentum volutpat enim, vitae tempor diam efficitur a. Integer mollis arcu quis ipsum lobortis, eget dapibus tortor sagittis.</p>
+				<a href="#" class="thumbnail">
+		      		<img src="holder.js/300x300">
+		    	</a>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" class="thumbnail">
-		      		<img src="holder.js/400x300">
-		    	</a>
+				<p>Morbi vel magna dignissim, pretium elit at, sagittis nisl. Nulla porttitor magna vel massa accumsan aliquam. Duis vulputate varius odio, et porttitor quam dignissim quis. Mauris vulputate ullamcorper eros. Proin eu tempor nisi. Aenean fringilla euismod ante non suscipit. Integer fermentum volutpat enim, vitae tempor diam efficitur a. Integer mollis arcu quis ipsum lobortis, eget dapibus tortor sagittis.</p>
 			</div>
 		</div>
 	</div>
 
-	<div class="page-header text-center">
-  		<h1>Faire un don</h1>
-  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
-	</div>
-
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-6">
-				<a href="#" class="thumbnail">
-		      		<img src="holder.js/400x300">
-		    	</a>
-			</div>
-			<div class="col-sm-6">
-				<p>Morbi vel magna dignissim, pretium elit at, sagittis nisl. Nulla porttitor magna vel massa accumsan aliquam. Duis vulputate varius odio, et porttitor quam dignissim quis. Mauris vulputate ullamcorper eros. Proin eu tempor nisi. Aenean fringilla euismod ante non suscipit. Integer fermentum volutpat enim, vitae tempor diam efficitur a. Integer mollis arcu quis ipsum lobortis, eget dapibus tortor sagittis.</p>
+			<div class="col-sm-12">
+				<h2 class="thankyou">Thank <span>You</span></h2>
 			</div>
 		</div>
 	</div>
