--- a/about.html
+++ b/about.html
@@ -39,15 +39,143 @@
 		        		<span class="caret"></span>
 		        	</a>
 		          	<ul class="dropdown-menu" role="menu">
-			            <li><a href="#">Artistes et artisans</a></li>
-			            <li><a href="#">Boutique</a></li>
-		          	</ul>
+			            <li><a href="#">Les créatifs</a></li>
+			        	</ul>
 		        </li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="join.html">Inscription</a></li>
 			</ul>
 		</div>
 	</nav>
+
+
+	<div class="container-fluid firstsection">
+		<div class="row">
+			<div class="page-header text-center">
+		  		<h1>L'association</h1>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-6">
+				<!--<div class="thumbnail">-->
+					<img src="static/img/asso.png" class="img-circle img-responsive">
+				<!--</div>-->
+			</div>
+			<div class="col-sm-6">
+				<p class="lead">Le café créatif « CRÉAPHÉ » est une association fondée en 2015, dédiée à l’expression créative, au fait main à Lille. À travers les ateliers créatifs, elle a pour ambition de créer du lien social pour rompre l’isolement des familles, encourager et favoriser la mixité culturelle, intergénérationnelle, sociale, transmettre des valeurs de partage, de l’entraide, de respect de l’environnement et d’ouverture sur le monde, s’appuyer sur la création artistique et culturelle, pour renforcer et créer un ancrage local, participer, transmettre, échanger les savoir-faire avec à d'autres mouvements artistiques, promouvoir tous qui aiment créer.
+ 				<br><br>
+Ateliers d’artistes, Coworking place, culture artistique, atelier de création Libre » pour enfants, la structure (à la fois destinée aux amateurs débutants et aux plus experts) se propose plusieurs activités</p>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="container-fluid secondsection">
+  		<div class="row">
+			<div class="page-header text-center">
+	  			<h1>Notre histoire</h1>
+	  		</div>
+	  	</div>
+
+	  	<div class="row">
+			<div class="col-sm-12">
+				<p>
+<blockquote>
+	<p>Fais de ta vie un rêve, et d’un rêve, une réalité</p>
+	<footer>Le Petit Prince de Antoine de Saint-Exupéry</footer>
+</blockquote>
+<br>
+Tania Blanquart, 31 ans, née au Portugal, dans une maison autour des champs agricoles et vignobles familiaux. Arrière-petite-fille d’un charpentier, un père doué pour le dessin et une maman manuelle débrouillarde en temps de crise ! Cursus en musique, diplôme professionnel en arts. Etudes supérieures en ingénierie de produits biologiques, Master pro en marketing. 
+Mariée avec un Ch’ti, bloguese de Minibohomemade, maman poule de 2 petits poussins. Et toujours passionnée par la les arts, de tous ces qui est fait-main et artistique!
+<br><br>
+« Cela ne faisait qu’un an depuis la naissance de mon premier que j’ai recommencé les activités loisirs artistiques. Mais quelque soit notre métier, salariée, mamans au foyer, congé parentale comme moi, nous pouvons vite être démotivées, soit par le manque de temps, soit pour la manque d’emplacement, soit parce que nous avons des enfants très petits qu’il faut surveiller, soit car nous nous sentions un peu seules à la maison.. 
+J’ai constaté que je n’étaient pas seule, que beaucoup d’autres créateurs comme moi, recherchent ce contact humain, ont envie de partager et d’échanger tout en créant, et que plus part d’entre elles sont des mamans comme moi, avec des super pouvoirs pour tout faire. Et c’est de là qui est née l’idée de créer un café créatif solidaire. Avec les superpouvoirs de mon mari (qui s’occupe de la création du site), mon rêve a commençait à gagner de la forme… 
+<br><br>
+Alexandre Blanquart, un papa et mari de Tânia, un geek passioné pour les nouvelles technologies et l’envie de partager ses connaissances et s’éclater dans ce projet. Passioné par les langues, plusieurs stages linguistiques en Japon, U.S.A, et au Portugal (chez la belle famille). Une famille accro aux arts, cursus en prépa et Ingénieur Télécom, salarié en tant que Ing. R&D dans un entreprise éditeur Logiciel, et un envie de partager, apprendre, et créer des nouvelles technologies informatique! 
+<br><br>
+C’est donc avec la rencontre d’Annelise dans un cours de couture qui a permis de créer cette association. 
+Annelise Ayatsou, bordelaise d’origine est maman d’une petite choue de 2 ans. Passionnée par la danse, le théâtre et photo. Attiré par tout type d’expression artistique, participation à des projets solidaires en tant que bénévole. D’un point de vue professionnel, c’est en tant que chef de projet marketing, planneur stratégique ou encore responsable de communication que j’évolue en tant que salariée puis indépendant.
+<br><br>
+« Aujourd’hui je travaille à la maison sur le développement de projet personnel : récupération créative (couture, déco, etc.), écriture d’histoire pour ma fille, herboriste/aromathérapie. 
+J’aspire à créer un lieu ou je pourrai sortir de cet isolement, partager et me nourrir des talents d’autres personnes et pourquoi pas mettre en place des ateliers sur ces thématiques. » 
+<br><br>
+Le rassemblement des ces 3 profils ont créer l’association en Janvier 2015.Un projet surtout communautaire, humain, avec la partage de valeurs solidaires dont tout le monde est créatif et peut donner ailes à la créativité sur tous les formes! Que vous aimez les arts plastiques, la couture, la photographie, cartonnage, ou tout autre passion créative, vous êtes le bienvenue parmi nous! 
+<br>
+<blockquote>
+	<p>Soyez le changement que vous voulez voir dans le monde.</p>
+	<footer>GHANDI</footer>
+</blockquote>
+</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="container-fluid">
+		<div class="row">
+		 	<div class="page-header text-center">
+		  		<h1>Nos objectifs</h1>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-12">
+				<p>
+Le créaphé a pour but les suivants objectifs:
+<ul>
+<li>Accessible à tous, encourager un mélange culturel, générationnel, social.</li>
+« N’importe qui peut venir, même les mamans avec enfants, puisqu’ils seront initiés à l’éveil créatif. Mamans au foyer, comme moi, nous pouvons vite démotivées. N’aimerez-vous pas une petite heure ou deux pour vos créations, sans devoir trouver une solution de secours pour les enfants?! »
+<li>Transmission de valeurs de partage, de l’entraide solidaire à travers l’art</li>
+<li>Encourager et accompagner les pratiques artistiques</li>
+<li>Privilégier la coopération entre les individus</li>
+« N’est-il pas plus agréable de se retrouver ensemble que de rester seule isolée à la maison?! »
+<li>Créer un ancrage local à travers l’art entre les citoyens: Inciter les habitants à s’impliquer dans des projets collectifs et soutenir les initiatives individuelles ou communes</li>
+« On se bat ensemble pour nos causes et nos valeurs! Une communauté unie, forte : l’union fait la force non? »
+<li>Participer à d’autres mouvements artistiques ensemble (salons, expositions, fêtes, ventes privés…)</li>
+<li>Transmission et échanges de nos savoir-faire (ateliers, déplacements vers des cafés citoyens, associations, écoles…)</li>
+<li>Respect de l’environnement et l’être humain</li>
+« La pratique des projets autour de l’éducation, de le développement durable, la sensibilisation pour des questions environnementales ce sont des thématiques qui nous voudrions débattre artistiquement »
+</ul>
+</p>
+			</div>
+		</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="page-header text-center">
+		  		<h1>Nos valeurs</h1>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-12">
+				<p>
+Example : Les potes en ciel => CHANGER EVIDEMENT! 
+Nos valeurs éducatives :
+<br><br>
+L’affirmation des droits de l’enfant et l’apprentissage de la citoyenneté,
+L’entraide et la solidaritéqui passe par la connaissance du mondequi nous entoure et l’apprentissage de la coopération,
+La lutte contre toute forme de discrimination: sexe, handicap, origine, catégorie sociale, religion, âge, culture… et donc la découverte de soi et des autres dans la différence,
+Le refus de la violencesous toutes ses formes et donc le droit à l’expression basé sur des valeurs de paix et de respect.
+<br><br>
+Pour faire vivre le projet, l’équipe bénévole et salariée s’appuie sur :
+<ul>
+<li>La Convention Internationale des Droits de l’Enfant 
+(Art. 31 : droit à l’expression et droit au loisir ; Art. 14 : droit à la participation des enfants dans les projets éducatifs). Lorsque les adultes donnent la possibilité aux enfants de prendre part aux décisions, de leur offrir une place et leur permettre d’être acteurs, ils aident les enfants à grandir et leur permettent d’exercer de manière concrète leur citoyenneté.</li>
+<li>La charte de la Fédération Internationale des Cafés des Enfants
+Les cafés des enfants sont des lieux ouverts à tous sans exclusion sociale quelle qu’elle soit (âge, sexe, nationalité…), où se vivent créativité et innovation sociale. Ils s’inscrivent dans une démarche d’éducation populaire et fondent leur action sur les valeurs d’émancipation, coopération, solidarité, justice, liberté, non-violence.</li>
+<li>La Charte de l’Economie Solidaire
+Le projet des Potes en Ciel s’inscrit à la fois par sa finalité, son fonctionnement et les activités proposées, dans la promotion d’une économie solidaire : utilité sociale, mixte professionnels/bénévoles, ressources hybrides, fonctionnement démocratique, consommation responsable …</li>
+<li>Le projet Educatif Global de la Ville de Lille
+Les activités de l’association participent au développement des objectifs retenus par la Ville de Lille : renforcer l’offre éducative et culturelle sur les différents temps de l’enfant et du jeune, favoriser la réussite scolaire et sociale de chaque enfant, conforter la place et le rôle des parents.</li>
+</ul>
+</p>
+			</div>
+		</div>
+
+	</div>
+
+
 
 	<footer class="footer text-center">
     	<div class="container">
@@ -67,8 +195,6 @@
 						<li><p><strong><a href="thanks.html">Remerciements</a></strong></p></li>
 					</ul>
 					<ul class="list-inline">
-						<li><p class="text-uppercase"><strong>Statut associatif</strong></p></li>
-						<li><p class="text-uppercase"><strong>CGU</strong></p></li>
 						<li><p class="text-uppercase"><strong>Mentions légales</strong></p></li>
 						<li><p class="text-uppercase"><strong>Plan du site</strong></p></li>
 					</ul>
@@ -86,5 +212,4 @@
     		</div>
       	</div>
     </footer>
-
 </body>
