trying some stuff for about page

--- a/about.html
+++ b/about.html
@@ -49,79 +49,102 @@
 	</nav>
 
 
-	<div class="container-fluid firstsection">
-		<div class="row">
-			<div class="page-header text-center">
-		  		<h1>L'association</h1>
+	<section id="association">
+		<div class="container">
+		    <div class="featurette">
+		    	<img class="featurette-image pull-right img-responsive" src="static/img/arbre_mains.png">
+		        <h2 class="featurette-heading">L'association<span class="muted"></span></h2>
+		        <p class="lead">Le café créatif « CRÉAPHÉ » est une association fondée en 2015, dédiée à l’expression créative, au fait main et à l’artisanat sur la métropole lilloise.<br><br>C’est avant tout un lieu de partage, chaleureux, amical, convivial et de rencontres pour tous ceux qui aiment créer, du plus grand au plus petit ! Plusieurs activités et outils sont proposés : ateliers d’artistes, à thèmes, d’éveil, kits, ou même libres; formations d’insertion professionnelle; places de coworking; bibliothèque; débats; etc.<br><br>Mais ce n’est pas que ça ! Nous mettons également, au cœur de notre projet, le soutien aux créatifs, désireux de se faire connaître. Pour cela, nous assurons les actions de communication suivantes : référencement sur le site web; ventes privées, expositions, show-room; magazine de promotion; créations de kits entre artistes; présences sur les marchés des créateurs et salons.<br><br>Tout en gardant la convivialité et l’esprit du café, qui manque de nos jours !</p>
+		    </div>
+    	</div>
+	</section>
+
+	<section id="history">
+		<div class="container">
+			<div class="media">
+			  <div class="media-left">
+			    <a href="#">
+			      <img class="media-object" src="static/img/photo_tania.png">
+			    </a>
+			  </div>
+			  <div class="media-body">
+			    <h4 class="media-heading">Tania</h4>
+			    <p>Tania Blanquart, née au Portugal, connaît depuis 
+
+			     autour des champs agricoles et vignobles familiaux. Arrière-petite-fille d’un charpentier, un père doué pour le dessin et une maman manuelle débrouillarde en temps de crise ! Cursus en musique, diplôme professionnel en arts. Etudes supérieures en ingénierie et marketing. Mariée avec un Ch’ti, maman poule de 2 petits poussins. Et toujours passionnée par les arts.
+
+« J'ai eu un enfance très heureuse. j'ai passé mon temps chez mes grand-parents, une famille très simple.. Je voyais mon papie déssiner et construire des jouets en bois, ma mamie en tricotant une poupée ou un vêtement.. Des moments chalereux, de partage, dont moi j'avais le plaisir de participer! Aujourd'hui dans une socièté aussi préssée, j'aimerais pouvoir transmettre les mêmes valeurs qui me sont transmises... Créer pour moi un café créatif solidaire est la construction d'un rêve, d'un image des ces vieux temps d'amour, partage, education et convivialité."</p>
+			  </div>
+			</div>
+			<div class="media">
+			  <div class="media-right">
+			    <a href="#">
+			      <img class="media-object" src="static/img/photo_alex.png">
+			    </a>
+			  </div>
+			  <div class="media-body">
+			    <h4 class="media-heading">Alexandre</h4>
+			    <p>Test</p>
+			  </div>
+			</div>
+
+			 
+	  		<div class="row">
+				<div class="page-header text-center">
+		  			<h1>Notre histoire</h1>
+		  		</div>
+		  	</div>
+
+		  	<div class="row">
+				<div class="col-sm-6">
+					<p>
+	<blockquote>
+		<p>Fais de ta vie un rêve, et d’un rêve, une réalité</p>
+		<footer>Le Petit Prince de Antoine de Saint-Exupéry</footer>
+	</blockquote>
+	<br>
+	Tânia Blanquart est présidente de l'association.  
+
+	Tania Blanquart, 31 ans, née au Portugal, dans une maison autour des champs agricoles et vignobles familiaux. Arrière-petite-fille d’un charpentier, un père doué pour le dessin et une maman manuelle débrouillarde en temps de crise ! Cursus en musique, diplôme professionnel en arts. Etudes supérieures en ingénierie de produits biologiques, Master pro en marketing. 
+	Mariée avec un Ch’ti, bloguese de Minibohomemade, maman poule de 2 petits poussins. Et toujours passionnée par la les arts, de tous ces qui est fait-main et artistique!
+	<br><br>
+	« Cela ne faisait qu’un an depuis la naissance de mon premier que j’ai recommencé les activités loisirs artistiques. Mais quelque soit notre métier, salariée, mamans au foyer, congé parentale comme moi, nous pouvons vite être démotivées, soit par le manque de temps, soit pour la manque d’emplacement, soit parce que nous avons des enfants très petits qu’il faut surveiller, soit car nous nous sentions un peu seules à la maison.. 
+	J’ai constaté que je n’étaient pas seule, que beaucoup d’autres créateurs comme moi, recherchent ce contact humain, ont envie de partager et d’échanger tout en créant, et que plus part d’entre elles sont des mamans comme moi, avec des super pouvoirs pour tout faire. Et c’est de là qui est née l’idée de créer un café créatif solidaire. Avec les superpouvoirs de mon mari (qui s’occupe de la création du site), mon rêve a commençait à gagner de la forme… 
+	<br><br>
+	Alexandre Blanquart, un papa et mari de Tânia, un geek passioné pour les nouvelles technologies et l’envie de partager ses connaissances et s’éclater dans ce projet. Passioné par les langues, plusieurs stages linguistiques en Japon, U.S.A, et au Portugal (chez la belle famille). Une famille accro aux arts, cursus en prépa et Ingénieur Télécom, salarié en tant que Ing. R&D dans un entreprise éditeur Logiciel, et un envie de partager, apprendre, et créer des nouvelles technologies informatique! 
+	<br><br>
+	C’est donc avec la rencontre d’Annelise dans un cours de couture qui a permis de créer cette association. 
+	Annelise Ayatsou, bordelaise d’origine est maman d’une petite choue de 2 ans. Passionnée par la danse, le théâtre et photo. Attiré par tout type d’expression artistique, participation à des projets solidaires en tant que bénévole. D’un point de vue professionnel, c’est en tant que chef de projet marketing, planneur stratégique ou encore responsable de communication que j’évolue en tant que salariée puis indépendant.
+	<br><br>
+	« Aujourd’hui je travaille à la maison sur le développement de projet personnel : récupération créative (couture, déco, etc.), écriture d’histoire pour ma fille, herboriste/aromathérapie. 
+	J’aspire à créer un lieu ou je pourrai sortir de cet isolement, partager et me nourrir des talents d’autres personnes et pourquoi pas mettre en place des ateliers sur ces thématiques. » 
+	<br><br>
+	Le rassemblement des ces 3 profils ont créer l’association en Janvier 2015.Un projet surtout communautaire, humain, avec la partage de valeurs solidaires dont tout le monde est créatif et peut donner ailes à la créativité sur tous les formes! Que vous aimez les arts plastiques, la couture, la photographie, cartonnage, ou tout autre passion créative, vous êtes le bienvenue parmi nous! 
+	<br>
+	<blockquote>
+		<p>Soyez le changement que vous voulez voir dans le monde.</p>
+		<footer>GHANDI</footer>
+	</blockquote>
+	</p>
+				</div>
+
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="thumbnail">
+						<img src="static/img/photo_alex.png" class="img-circle img-responsive">
+					</div>
+				</div>
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="col-sm-6">
-				<!--<div class="thumbnail">-->
-					<img src="static/img/asso.png" class="img-circle img-responsive">
-				<!--</div>-->
-			</div>
-			<div class="col-sm-6">
-				<p class="lead">Le café créatif « CRÉAPHÉ » est une association fondée en 2015, dédiée à l’expression créative, au fait main à Lille. À travers les ateliers créatifs, elle a pour ambition de créer du lien social pour rompre l’isolement des familles, encourager et favoriser la mixité culturelle, intergénérationnelle, sociale, transmettre des valeurs de partage, de l’entraide, de respect de l’environnement et d’ouverture sur le monde, s’appuyer sur la création artistique et culturelle, pour renforcer et créer un ancrage local, participer, transmettre, échanger les savoir-faire avec à d'autres mouvements artistiques, promouvoir tous qui aiment créer.
- 				<br><br>
-Ateliers d’artistes, Coworking place, culture artistique, atelier de création Libre » pour enfants, la structure (à la fois destinée aux amateurs débutants et aux plus experts) se propose plusieurs activités</p>
-			</div>
-		</div>
+	</section>	
 
-	</div>
-
-	<div class="container-fluid secondsection">
-  		<div class="row">
-			<div class="page-header text-center">
-	  			<h1>Notre histoire</h1>
-	  		</div>
-	  	</div>
-
-	  	<div class="row">
-			<div class="col-sm-12">
-				<p>
-<blockquote>
-	<p>Fais de ta vie un rêve, et d’un rêve, une réalité</p>
-	<footer>Le Petit Prince de Antoine de Saint-Exupéry</footer>
-</blockquote>
-<br>
-Tania Blanquart, 31 ans, née au Portugal, dans une maison autour des champs agricoles et vignobles familiaux. Arrière-petite-fille d’un charpentier, un père doué pour le dessin et une maman manuelle débrouillarde en temps de crise ! Cursus en musique, diplôme professionnel en arts. Etudes supérieures en ingénierie de produits biologiques, Master pro en marketing. 
-Mariée avec un Ch’ti, bloguese de Minibohomemade, maman poule de 2 petits poussins. Et toujours passionnée par la les arts, de tous ces qui est fait-main et artistique!
-<br><br>
-« Cela ne faisait qu’un an depuis la naissance de mon premier que j’ai recommencé les activités loisirs artistiques. Mais quelque soit notre métier, salariée, mamans au foyer, congé parentale comme moi, nous pouvons vite être démotivées, soit par le manque de temps, soit pour la manque d’emplacement, soit parce que nous avons des enfants très petits qu’il faut surveiller, soit car nous nous sentions un peu seules à la maison.. 
-J’ai constaté que je n’étaient pas seule, que beaucoup d’autres créateurs comme moi, recherchent ce contact humain, ont envie de partager et d’échanger tout en créant, et que plus part d’entre elles sont des mamans comme moi, avec des super pouvoirs pour tout faire. Et c’est de là qui est née l’idée de créer un café créatif solidaire. Avec les superpouvoirs de mon mari (qui s’occupe de la création du site), mon rêve a commençait à gagner de la forme… 
-<br><br>
-Alexandre Blanquart, un papa et mari de Tânia, un geek passioné pour les nouvelles technologies et l’envie de partager ses connaissances et s’éclater dans ce projet. Passioné par les langues, plusieurs stages linguistiques en Japon, U.S.A, et au Portugal (chez la belle famille). Une famille accro aux arts, cursus en prépa et Ingénieur Télécom, salarié en tant que Ing. R&D dans un entreprise éditeur Logiciel, et un envie de partager, apprendre, et créer des nouvelles technologies informatique! 
-<br><br>
-C’est donc avec la rencontre d’Annelise dans un cours de couture qui a permis de créer cette association. 
-Annelise Ayatsou, bordelaise d’origine est maman d’une petite choue de 2 ans. Passionnée par la danse, le théâtre et photo. Attiré par tout type d’expression artistique, participation à des projets solidaires en tant que bénévole. D’un point de vue professionnel, c’est en tant que chef de projet marketing, planneur stratégique ou encore responsable de communication que j’évolue en tant que salariée puis indépendant.
-<br><br>
-« Aujourd’hui je travaille à la maison sur le développement de projet personnel : récupération créative (couture, déco, etc.), écriture d’histoire pour ma fille, herboriste/aromathérapie. 
-J’aspire à créer un lieu ou je pourrai sortir de cet isolement, partager et me nourrir des talents d’autres personnes et pourquoi pas mettre en place des ateliers sur ces thématiques. » 
-<br><br>
-Le rassemblement des ces 3 profils ont créer l’association en Janvier 2015.Un projet surtout communautaire, humain, avec la partage de valeurs solidaires dont tout le monde est créatif et peut donner ailes à la créativité sur tous les formes! Que vous aimez les arts plastiques, la couture, la photographie, cartonnage, ou tout autre passion créative, vous êtes le bienvenue parmi nous! 
-<br>
-<blockquote>
-	<p>Soyez le changement que vous voulez voir dans le monde.</p>
-	<footer>GHANDI</footer>
-</blockquote>
-</p>
-			</div>
-		</div>
-	</div>
-
-	<div class="container-fluid">
-		<div class="row">
-		 	<div class="page-header text-center">
-		  		<h1>Nos objectifs</h1>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-sm-12">
-				<p>
-Le créaphé a pour but les suivants objectifs:
+	<section id="objectives">
+		<div class="container">
+		    <div class="featurette">
+		    	<img class="featurette-image pull-right img-responsive" src="">
+		        <h2 class="featurette-heading">Nos objectifs<span class="muted"></span></h2>
+		        <p class="lead">Le créaphé a pour but les suivants objectifs:
 <ul>
 <li>Accessible à tous, encourager un mélange culturel, générationnel, social.</li>
 « N’importe qui peut venir, même les mamans avec enfants, puisqu’ils seront initiés à l’éveil créatif. Mamans au foyer, comme moi, nous pouvons vite démotivées. N’aimerez-vous pas une petite heure ou deux pour vos créations, sans devoir trouver une solution de secours pour les enfants?! »
@@ -137,13 +160,14 @@ Le créaphé a pour but les suivants objectifs:
 « La pratique des projets autour de l’éducation, de le développement durable, la sensibilisation pour des questions environnementales ce sont des thématiques qui nous voudrions débattre artistiquement »
 </ul>
 </p>
-			</div>
-		</div>
-
+		    </div>
+    	</div>
+	</section>
+	
 	<div class="container">
 		<div class="row">
 			<div class="page-header text-center">
-		  		<h1>Nos valeurs</h1>
+		  		<h1 class="">Nos valeurs</h1>
 			</div>
 		</div>
 
@@ -176,6 +200,85 @@ Les activités de l’association participent au développement des objectifs re
 	</div>
 
 
+	<!--<section id="history">
+		<div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Notre histoire</h2>
+                    <h3 class="section-subheading text-muted"></h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="static/img/photo_tania.png">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Tania</h4>
+                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="static/img/photo_alex.png">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Alexandre</h4>
+                                    <h4 class="subheading">An Agency is Born</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>December 2012</h4>
+                                    <h4 class="subheading">Transition to Full Service</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>July 2014</h4>
+                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>Be Part
+                                    <br>Of Our
+                                    <br>Story!</h4>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+	</section>-->
 
 	<footer class="footer text-center">
     	<div class="container">
