--- a/index.html
+++ b/index.html
@@ -1,118 +1,65 @@
-<!DOCTYPE html>
-<html lang="fr">
+---
+layout: default
+---
 
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Créaphé</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<link href='http://fonts.googleapis.com/css?family=Lato:300italic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="static/css/font-awesome.min.css">
-<link rel='stylesheet' href='static/css/fullcalendar.min.css' />
-<link rel="stylesheet" href="static/css/styles.css">
-</head>
+<div id="starter">
+	<div class="jumbotron">
+		<div class="container">
+	  		<h1>L'association qui vous ressemble</h1>
+	  		<p>Le fait-main, l'artisanat, la création par vous et pour vous</p>
+	  		<p><a class="btn btn-primary btn-lg" href="about.html" role="button">En savoir plus</a></p>	
+	  	</div>
+	</div>
+</div>
 
-<body>
+<div class="page-header text-center">
+ 	<h1>Actualités</h1>
+  	<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
+</div>
 
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html">
-					<img src="static/img/logo.png">
-				</a>
-			</div>
-
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="about.html">Notre projet</a></li>
-				<li><a href="funding.html">Nous soutenir</a></li>
-				<li class="dropdown">
-		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projets 
-		        		<span class="caret"></span>
-		        	</a>
-		          	<ul class="dropdown-menu" role="menu">
-			            <li><a href="#">Ateliers</a></li>
-			            <li><a href="#">Formations</a></li>
-		          	</ul>
-		        </li>
-				<li class="dropdown">
-		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Communauté 
-		        		<span class="caret"></span>
-		        	</a>
-		          	<ul class="dropdown-menu" role="menu">
-			            <li><a href="#">Les créatifs</a></li>
-			           </ul>
-		        </li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="join.html">Inscription</a></li>
-			</ul>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-6 col-md-3">
+		    <a href="#" class="thumbnail">
+		      	<img src="holder.js/242x280">
+		    </a>
 		</div>
-	</nav>
-
-	<div id="starter">
-		<video id="videobg" autoplay loop muted preload="auto">
-	    	<!--<source src="static/videobg.mp4" type="video/mp4">-->
-	    	<source src="../content/videobg.mp4" type="video/mp4">
-	    </video>
-
-		<div class="jumbotron transparentbg whitecolor">
-			<div class="container">
-	  			<h1>L'association qui vous ressemble</h1>
-	  			<p>Le fait-main, l'artisanat, la création par vous et pour vous</p>
-	  			<p><a class="btn btn-primary btn-lg" href="about.html" role="button">En savoir plus</a></p>	
-	  		</div>
+		<div class="col-xs-6 col-md-3">
+		   	<a href="#" class="thumbnail">
+		      	<img src="holder.js/242x280">
+		    </a>
+		</div>
+		<div class="col-xs-6 col-md-3">
+		    <a href="#" class="thumbnail">
+		      	<img src="holder.js/242x280">
+		    </a>
+		</div>
+		<div class="col-xs-6 col-md-3">
+		    <a href="#" class="thumbnail">
+		      	<img src="holder.js/242x280">
+		    </a>
 		</div>
 	</div>
+</div>
 
-	<div class="page-header text-center">
-  		<h1>Actualités</h1>
-  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
-	</div>
-
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-6 col-md-3">
-		    	<a href="#" class="thumbnail">
-		      		<img src="holder.js/242x280">
-		    	</a>
-		  	</div>
-		  	<div class="col-xs-6 col-md-3">
-		    	<a href="#" class="thumbnail">
-		      		<img src="holder.js/242x280">
-		    	</a>
-		  	</div>
-		  	<div class="col-xs-6 col-md-3">
-		    	<a href="#" class="thumbnail">
-		      		<img src="holder.js/242x280">
-		    	</a>
-		  	</div>
-		  	<div class="col-xs-6 col-md-3">
-		    	<a href="#" class="thumbnail">
-		      		<img src="holder.js/242x280">
-		    	</a>
-		  	</div>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-12">
+			<div class="page-header text-center">
+			 	<h1>Agenda</h1>
+			  	<p class="lead">Des ateliers pour les petits comme les grands</p>
+			  	<a class="btn btn-primary" data-toggle="collapse" href="#collapseAgenda" aria-expanded="false" aria-controls="collapseAgenda">Agenda</a>
+			</div>	
 		</div>
 	</div>
-
-
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="page-header text-center">
-			  		<h1>Agenda</h1>
-			  		<p class="lead">Des ateliers pour les petits comme les grands</p>
-			  		<a class="btn btn-primary" data-toggle="collapse" href="#collapseAgenda" aria-expanded="false" aria-controls="collapseAgenda">Agenda</a>
-				</div>	
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="collapse" id="collapseAgenda">
-  					<div id='calendar'></div>
-				</div>
+	<div class="row">
+		<div class="col-sm-12">
+			<div class="collapse" id="collapseAgenda">
+  				<div id='calendar'></div>
 			</div>
 		</div>
 	</div>
+</div>
 
 	<!---PLANNING-->
 
@@ -204,52 +151,7 @@
 		</div>
 	</div>
 
-	<footer class="footer text-center">
-    	<div class="container">
-    		<div class="row">
-    			<div class="col-sm-12">
-    				<p class="lead"><strong>Créaphé</strong></p>
-    				<ul class="list-inline">
-						<li><p><strong><a href="blog.html">Blog</a></strong></p></li>
-						<li><p><strong><a href="blog.html">S'inscrire à la newsletter</a></strong></p></li>
-					</ul>
-					<ul class="list-inline">
-						<li><p><strong><a href="blog.html">Notre projet</a></strong></p></li>
-						<li><p><strong><a href="founding.html">Nous soutenir</a></strong></p></li>
-						<li><p><strong><a href="contact.html">Nous contacter</a></strong></p></li>
-						<li><p><strong><a href="join.html">Inscription</a></strong></p></li>
-						<li><p><strong><a href="thanks.html">Remerciements</a></strong></p></li>
-					</ul>
-					<ul class="list-inline">
-						<li><p class="text-uppercase"><strong>Mentions légales</strong></p></li>
-						<li><p class="text-uppercase"><strong>Plan du site</strong></p></li>
-					</ul>
-
-    				<hr/>
-
-    				<p class="lead"><strong>Rejoignez-nous sur</strong></p>
-    				<ul class="list-inline">
-    					<li><i class="fa fa-facebook-square fa-2x"></i></li>
-						<li><i class="fa fa-pinterest-square fa-2x"></i></li>
-						<li><i class="fa fa-instagram fa-2x"></i></li>
-					</ul>
-					<p class="text-muted"><small>© 2015 Créaphé, All rights reserved</small></p>
-    			</div>
-    		</div>
-      	</div>
-    </footer>
-
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
-    <script src='static/js/jquery.min.js'></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-
-	<script src='static/js/moment.min.js'></script>
-	<script src='static/js/fullcalendar.min.js'></script>
-
-	<script src="static/js/mansory.min.js"></script>
-	<script src="static/js/imagesloaded.min.js"></script>
-	<script src="static/js/holder.min.js"></script>
-	<script src="static/js/app.js"></script>
+	
 </body>
 
 </html>
